Uses VH. Maybe fixed overflow issue.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 p {
-    padding-top: 5%;
+    padding-top: 40vh;
 }
 
 #left-letter-text {
